--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#products">المنتجات</a></li>
                 <li><a href="#gallery">معرض الصور</a></li>
                 <li><a href="#contact">اتصل بنا</a></li>
-                <li class="whatsapp-icon"><a href="https://wa.me/201210391421"><i class="fab fa-whatsapp"></i></a></li>
+                <li class="whatsapp-icon"><a href="https://wa.me/201210391421" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
             </ul>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -286,10 +286,10 @@
                     <h3>تريكو الشرقاوي</h3>
                     <p>مصنع متخصص في إنتاج الملابس الشتوية للأطفال منذ عام 2003</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="https://wa.me/201210391421"><i class="fab fa-whatsapp"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/share/15TXFznBpL/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/tricko_alsharkawy?igsh=Zm0zcXN3MWhmeWFk" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://wa.me/201210391421" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="footer-links">
@@ -324,11 +324,11 @@
     </button>
 
     <!-- واتساب مباشر -->
-    <a href="https://wa.me/201210391421" class="whatsapp-float">
+    <a href="https://wa.me/201210391421" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
     <script src="script.js"></script>
 </body>
-    </html>
+</html>
