--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero-slider">
             <div class="slide active" style="background-image: url('hero1.jpg')">
                 <div class="hero-content">
-                    <h2>جودة لا تقارن منذ 20 عاماً</h2>
+                    <h2>جوده لا تقارن منذ اكتر من 20 عام ♡</h2>
                     <p>خبرتنا في صناعة التريكو تجعلنا الأفضل</p>
                     <a href="#products" class="cta-button">تصفح المنتجات</a>
                 </div>
@@ -331,4 +331,4 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
     <script src="script.js"></script>
 </body>
-</html>
+                      </html>
